# 2022_2_SL

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.ru.md  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: BRANCHES.ru.md  ISSUES.ru.md
include/: Message.hpp  calculation.hpp  client.h  component.h  logacceptor.h  logcollector.h  logsender.h  logwriter.h  message.h  sensor.h  serialize.h  serializer.h  socket.h
src/: Message.cpp  calculation.cpp  client.cpp  component.cpp  main.cpp  message.cpp  serialize.cpp  server.cpp  session.cpp
test/: CMakeLists.txt  test.cpp
test/mocks/: CMakeLists.txt  mocks.cpp
